matrix/discord-bridge.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: discord-bridge
  namespace: matrix
  labels:
    app: discord
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord
  serviceName: discord-svc
  template:
    metadata:
      labels:
        app: discord
    spec:
      containers:
        - name: discord
          image: dock.mau.dev/mautrix/discord:latest
          resources:
            requests:
              memory: "200Mi"
              cpu: "50m"
            limits:
              memory: "400Mi"
              cpu: "200m"
          ports:
            - containerPort: 29334
          volumeMounts:
            - mountPath: "/data"
              name: discord-pvc
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 10.43.0.10
          - 8.8.8.8
  volumeClaimTemplates:
    - metadata:
        name: discord-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: local-path
