matrix/imessage-syncproxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: imessage-proxysync
  namespace: matrix
spec:
  selector:
    matchLabels:
      app: imessage-proxysync
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: imessage-proxysync
    spec:
      containers:
        - image: dock.mau.dev/mautrix/syncproxy:latest
          name: imessage
          resources:
            requests:
              memory: "200Mi"
              cpu: "50m"
            limits:
              memory: "400Mi"
              cpu: "200m"
          ports:
            - containerPort: 29332
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 10.43.0.10
          - 8.8.8.8
