matrix/instagram-bridge.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: instagram-bridge
  namespace: matrix
  labels:
    app: instagram
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instagram
  serviceName: instagram-svc
  template:
    metadata:
      labels:
        app: instagram
    spec:
      containers:
        - name: instagram
          image: dock.mau.dev/mautrix/meta:latest
          resources:
            requests:
              memory: "200Mi"
              cpu: "50m"
            limits:
              memory: "400Mi"
              cpu: "200m"
          ports:
            - containerPort: 29319
          volumeMounts:
            - mountPath: "/data"
              name: instagram-pvc
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 10.43.0.10
          - 8.8.8.8
  volumeClaimTemplates:
    - metadata:
        name: instagram-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: local-path
