matrix/signal-bridge.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: signal-bridge
  namespace: matrix
  labels:
    app: signal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signal
  serviceName: signal-svc
  template:
    metadata:
      labels:
        app: signal
    spec:
      containers:
        - name: signal
          image: dock.mau.dev/mautrix/signal:latest
          resources:
            requests:
              memory: "200Mi"
              cpu: "50m"
            limits:
              memory: "400Mi"
              cpu: "200m"
          ports:
            - containerPort: 29328
          volumeMounts:
            - mountPath: "/data"
              name: signal-pvc
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 10.43.0.10
          - 8.8.8.8
  volumeClaimTemplates:
    - metadata:
        name: signal-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: local-path
