matrix/slack-bridge.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: slack-bridge
  namespace: matrix
  labels:
    app: slack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slack
  serviceName: slack-svc
  template:
    metadata:
      labels:
        app: slack
    spec:
      containers:
        - name: slack
          image: dock.mau.dev/mautrix/slack:latest
          resources:
            requests:
              memory: "200Mi"
              cpu: "50m"
            limits:
              memory: "400Mi"
              cpu: "200m"
          ports:
            - containerPort: 29335
          volumeMounts:
            - mountPath: "/data"
              name: slack-pvc
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 10.43.0.10
          - 8.8.8.8
  volumeClaimTemplates:
    - metadata:
        name: slack-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: local-path
