matrix/whatsapp-bridge.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: whatsapp-bridge
  namespace: matrix
  labels:
    app: whatsapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whatsapp
  serviceName: whatsapp-svc
  template:
    metadata:
      labels:
        app: whatsapp
    spec:
      containers:
        - name: whatsapp
          image: dock.mau.dev/mautrix/whatsapp:latest
          resources:
            requests:
              memory: "200Mi"
              cpu: "50m"
            limits:
              memory: "400Mi"
              cpu: "200m"
          ports:
            - containerPort: 29318
          volumeMounts:
            - mountPath: "/data"
              name: whatsapp-pvc
      dnsPolicy: "None"
      dnsConfig:
        nameservers:
          - 10.43.0.10
          - 8.8.8.8
  volumeClaimTemplates:
    - metadata:
        name: whatsapp-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
        storageClassName: local-path
