matrix/signal-bridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signal-service
  namespace: matrix
  labels:
    app: signal
spec:
  type: ClusterIP
  selector:
    app: signal
  ports:
    - name: http
      port: 29328
      protocol: TCP
      targetPort: 29328
