matrix/synapse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: synapse
  namespace: matrix
spec:
  selector:
    matchLabels:
      app: synapse
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
        - image: matrixdotorg/synapse:v1.97.0
          name: synapse
          # args: ["generate"]
          # env:
          #   - name: SYNAPSE_SERVER_NAME
          #     value: "ryleycoyote.com"
          #   - name: SYNAPSE_REPORT_STATS
          #     value: "no"
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - containerPort: 8008
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: synapse-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: synapse
  name: synapse-service
  namespace: matrix
spec:
  clusterIP: None
  ports:
    - name: http
      port: 8008
      protocol: TCP
      targetPort: 8008
  selector:
    app: synapse
  type: ClusterIP
