matrix/whatsapp-bridge-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whatsapp-service
  namespace: matrix
  labels:
    app: whatsapp
spec:
  type: ClusterIP
  selector:
    app: whatsapp
  ports:
    - name: http
      port: 29318
      protocol: TCP
      targetPort: 29318
